# libgrain

./: CMakeLists.txt  LICENSE  README.md
cmake/: libgrainConfig.cmake.in
doc/: Grain.md  Todo.md
include/: Geometry.hpp  Grain.hpp  GrainLib.hpp
include/2d/: Arc.hpp  Border.hpp  Bounds2.hpp  CatmullRomCurve.hpp  Circle.hpp  Delaunay.hpp  Dimension.hpp  GraphicCompoundPath.hpp  GraphicPath.hpp  GraphicPathPoint.hpp  Line.hpp  PoissonDisc.hpp  Polygon.hpp  PosRect.hpp  Quadrilateral.hpp  RangeRect.hpp  Rect.hpp  RectEdges.hpp  Ring.hpp  Superellipse.hpp  Triangle.hpp
include/2d/Data/: CVF2.hpp  CVF2File.hpp  CVF2TileManager.hpp  ValueGrid.hpp
include/3d/: Bounds3.hpp  Cube.hpp  RangeCube.hpp
include/App/: App.hpp
include/Audio/: AudioInterface.hpp
include/Bezier/: Bezier.hpp  BezierValueCurve.hpp
include/CSS/: CSS.hpp  CSSColor.hpp
include/Color/: CDL.hpp  CIEXYZ.hpp  CIExyY.hpp  Color.hpp  Gradient.hpp  HSL.hpp  HSV.hpp  LMS.hpp  NamedColor.hpp  OKColor.hpp  RGB.hpp  RGBA.hpp  RGBLUT1.hpp  RGBRamp.hpp  YUV.hpp
include/Core/: Hardware.hpp  Log.hpp  ThreadPool.hpp
include/DSP/: DSP.hpp  EnvelopeFollower.hpp  FFT.hpp  Freq.hpp  LUT1.hpp  LevelCurve.hpp  LinearScaler.hpp  Partials.hpp  RingBuffer.hpp  WeightedSamples.hpp
include/Data/: DataComposer.hpp  JSONWalker.hpp  ParamConfig.hpp
include/Database/: DBaseFile.hpp  PostgreSQL.hpp
include/File/: File.hpp  PolygonsFile.hpp  TiffFile.hpp  XYZFile.hpp
include/GUI/: Component.hpp  Event.hpp  GUIStyle.hpp  Screen.hpp  Style.hpp  ValueComponent.hpp  View.hpp  Window.hpp  macos_event.h  macos_view.h  macos_window.h
include/GUI/Components/: AngleDial.hpp  Button.hpp  Checkbox.hpp  ColorWell.hpp  ColorWheel.hpp  Component.hpp  GradientControl.hpp  ScrollBar.hpp  Slider.hpp  TextField.hpp  Textfield.hpp  Toggle.hpp  ValueComponent.hpp
include/GUI/Views/: ScrollView.hpp  SplitView.hpp  View.hpp  Viewport.hpp
include/Geo/: Geo.hpp  GeoMetaTile.hpp  GeoProj.hpp  GeoShape.hpp  GeoShapeFile.hpp  GeoTileRenderer.hpp  WKBParser.hpp
include/Graphic/: AnimationFrameDriver.hpp  AppleCGContext.hpp  CairoContext.hpp  Font.hpp  Graphic.hpp  GraphicContext.hpp  MacCGContext.hpp  StrokeStyle.hpp  macos_image.h
include/Image/: ICCProfiles.hpp  Image.hpp
include/Math/: Mat3.hpp  Mat4.hpp  Math.hpp  NumberSeries.hpp  Random.hpp  Vec2.hpp  Vec2Fix.hpp  Vec3.hpp  Vec3Fix.hpp
include/Midi/: Midi.hpp
include/Movie/: Movie.hpp  MovieWriter.hpp
include/SVG/: SVG.hpp  SVGCircleElement.hpp  SVGDefsElement.hpp  SVGElement.hpp  SVGEllipseElement.hpp  SVGGradient.hpp  SVGGroupElement.hpp  SVGLineElement.hpp  SVGPaintElement.hpp  SVGPaintServer.hpp  SVGPaintStyle.hpp  SVGPathElement.hpp  SVGPolygonElement.hpp  SVGRectElement.hpp  SVGRootElement.hpp
include/Scripting/: Lua.hpp  Toml.hpp
include/Signal/: Audio.hpp  Signal.hpp  SignalAllPassFilter.hpp  SignalBandPassFilter.hpp  SignalButterworthFilter.hpp  SignalFile.hpp  SignalFilter.hpp  SignalFormantFilter.hpp  SignalIR.hpp  SignalLadderFilter.hpp  SignalLowPassFilter.hpp  SignalWave.hpp
include/String/: CSVData.hpp  CSVString.hpp  String.hpp  StringList.hpp
include/Time/: DateTime.hpp  TimeMeasure.hpp  Timestamp.hpp
include/Type/: ByteOrder.hpp  Data.hpp  Fix.hpp  FixProperty.hpp  Flags.hpp  HiResValue.hpp  KeyValue.hpp  List.hpp  Object.hpp  Range.hpp  Type.hpp
src/: Geometry.cpp  Grain.cpp
src/2d/: Arc.cpp  Border.cpp  Bounds2.cpp  CatmullRomCurve.cpp  Circle.cpp  Delaunay.cpp  Dimension.cpp  GraphicCompoundPath.cpp  GraphicPath.cpp  GraphicPathPoint.cpp  Line.cpp  PoissonDisc.cpp  Polygon.cpp  PosRect.cpp  Quadrilateral.cpp  RangeRect.cpp  Rect.cpp  RectEdges.cpp  Superellipse.cpp  Triangle.cpp
src/2d/Data/: CVF2.cpp  CVF2File.cpp  CVF2TileManager.cpp  ValueGrid.cpp
src/3d/: Bounds3.cpp  Cube.cpp  RangeCube.cpp
src/App/: App.cpp  macos_app.mm
src/Audio/: AudioInterface.cpp
src/Bezier/: Bezier.cpp  BezierValueCurve.cpp
src/CSS/: CSS.cpp  CSSColor.cpp
src/Color/: CDL.cpp  CIEXYZ.cpp  CIExyY.cpp  Color.cpp  Gradient.cpp  HSL.cpp  HSV.cpp  LMS.cpp  NamedColor.cpp  OKColor.cpp  RGB.cpp  RGBA.cpp  RGBLUT1.cpp  RGBRamp.cpp  YUV.cpp  mixbox.cpp
src/Core/: Hardware.cpp  Log.cpp  ThreadPool.cpp
src/DSP/: DSP.cpp  EnvelopeFollower.cpp  FFT.cpp  Freq.cpp  LUT1.cpp  LevelCurve.cpp  Partials.cpp  RingBuffer.cpp  WeightedSamples.cpp
src/Data/: DataComposer.cpp  JSONWalker.cpp
src/Database/: DBaseFile.cpp  PostgreSQL.cpp
src/File/: File.cpp  PolygonsFile.cpp  TiffFile.cpp  XYZFile.cpp
src/GUI/: Component.cpp  Event.cpp  GUIStyle.cpp  Screen.cpp  Style.cpp  ValueComponent.cpp  View.cpp  Window.cpp  macos_event.mm  macos_view.mm  macos_window.mm
src/GUI/Components/: AngleDial.cpp  Button.cpp  Checkbox.cpp  ColorWell.cpp  (+9 more)
src/Geo/: Geo.cpp  GeoMetaTile.cpp  GeoProj.cpp  GeoShape.cpp  GeoShapeFile.cpp  GeoTileRenderer.cpp  WKBParser.cpp
src/Graphic/: AnimationFrameDriver.cpp  AppleCGContext.cpp  CairoContext.cpp  Font.cpp  GraphicContext.cpp  MacCGContext.cpp  StrokeStyle.cpp  macos_image.mm
src/Image/: Image.cpp  macos_image_loader.mm
src/Math/: Mat3.cpp  Mat4.cpp  Math.cpp  NumberSeries.cpp  Random.cpp  Vec2.cpp  Vec2Fix.cpp  Vec3.cpp  Vec3Fix.cpp
src/Midi/: Midi.cpp
src/Movie/: MovieWriter.cpp
src/SVG/: SVG.cpp  SVGCircleElement.cpp  SVGDefsElement.cpp  SVGElement.cpp  SVGEllipseElement.cpp  SVGGradient.cpp  SVGGroupElement.cpp  SVGLineElement.cpp  SVGPaintElement.cpp  SVGPaintServer.cpp  SVGPaintStyle.cpp  SVGPathElement.cpp  SVGPolygonElement.cpp  SVGRectElement.cpp  SVGRootElement.cpp
src/Scripting/: Lua.cpp  Toml.cpp
src/Signal/: Audio.cpp  Signal.cpp  SignalAllPassFilter.cpp  SignalBandPassFilter.cpp  SignalButterworthFilter.cpp  SignalFile.cpp  SignalFilter.cpp  SignalFormantFilter.cpp  SignalIR.cpp  SignalLadderFilter.cpp  SignalLowPassFilter.cpp  SignalWave.cpp
src/String/: CSVData.cpp  CSVString.cpp  String.cpp  StringList.cpp
src/Time/: DateTime.cpp  Timestamp.cpp
src/Type/: Data.cpp  Fix.cpp  FixProperty.cpp  Flags.cpp  HiResValue.cpp  Object.cpp  Range.cpp  Type.cpp
unused/: SignalFile.cpp  SignalFile.hpp
(+4 files in other folders)
